[tool.poetry]
name = "wafermap"
version = "0.2.7"
description = "A python package to plot maps of semiconductor wafers."
authors = ["cap1tan"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/cap1tan/wafermap"
keywords = ["semiconductor", "wafer", "layout", "plot", "grid"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
folium = "^0.19.5"
branca = ">=0.6.0"
Pillow = "^11.1.0"
numpy = ">=2.00.0"
html2image = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
isort = ">=5.12.0"
flake8 = {version = ">=6.0.0", python = ">=3.8.1"}
flake8-docstrings = ">=1.7.0"
pytest = ">=7.3.1"
pytest-cov = "*"
# pre-commit = "^3.2.2"
# toml = "^0.10.2"
pylint = ">=2.17.2"
tox = ">=3.28.0"
tox-poetry-installer = ">=0.10.2"
twine = ">=4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
